bugs on menu bar OK, At Footer OK remainig sending email...

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>😎 FYJL Portfolio</title>
+    <style>
+      html{
+        overflow-x: hidden;
+      }
+      body{
+        overflow-x: hidden;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
